--- a/lesson 6/static/bower.json
+++ b/lesson 6/static/bower.json
@@ -19,6 +19,7 @@
     "text": "~2.0.15",
     "bootstrap": "~3.3.6",
     "socket-io": "~1.0.0",
-    "Chart.js": "chartjs#~2.1.3"
+    "Chart.js": "chartjs#~2.1.3",
+    "angular-chart.js": "~0.10.2"
   }
 }
