--- a/lesson 6/package.json
+++ b/lesson 6/package.json
@@ -17,7 +17,8 @@
     "mqtt": "1.8.0",
     "pi-gpio": "0.0.8",
     "rpi-gpio": "0.7.0",
-    "socket.io": "1.4.5",
-    "string_decoder": "0.10.31"
+    "string_decoder": "0.10.31",
+    "underscore": "1.8.3",
+    "ws": "1.1.1"
   }
 }
