--- a/lesson 6/static/bower.json
+++ b/lesson 6/static/bower.json
@@ -20,6 +20,8 @@
     "bootstrap": "~3.3.6",
     "socket-io": "~1.0.0",
     "Chart.js": "chartjs#~2.1.3",
-    "angular-chart.js": "~0.10.2"
+    "angular-chart.js": "~0.10.2",
+    "angular-websocket": "~2.0.0",
+    "underscore": "~1.8.3"
   }
 }
