--- a/lesson 6/static/package.json
+++ b/lesson 6/static/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "grunt": "1.0.1",
     "grunt-sass": "1.2.0",
-    "mqtt": "1.10.0"
+    "mqtt": "1.10.0",
+    "ws": "1.1.1"
   }
 }
