--- a/package.json
+++ b/package.json
@@ -1,38 +1,24 @@
 {
-  "name": "motion_cam_node",
+  "name": "jessica_bot",
   "version": "1.0.0",
-  "description": "NodeJS to IOT Lessons =======",
-  "main": "index.js",
-  "dependencies": {
-    "aws-sdk": "2.3.11",
-    "chokidar": "1.4.3",
-    "express": "4.13.4",
-    "hapi": "13.4.1",
-    "inert": "4.0.0",
-    "johnny-five": "0.9.49",
-    "mosca": "1.2.0",
-    "mows": "0.0.6",
-    "mqtt": "1.8.0",
-    "mqtt-ws": "0.2.0",
-    "node-static": "0.7.7",
-    "node-watch": "0.3.5",
-    "raspicam": "0.2.13",
-    "rpi-gpio": "0.7.0",
-    "socket.io": "1.4.5",
-    "string_decoder": "0.10.31"
-  },
-  "devDependencies": {},
+  "description": "An MQTT sample.",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AGoodnight/Node-and-IOT.git"
-  },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/AGoodnight/Node-and-IOT/issues"
-  },
-  "homepage": "https://github.com/AGoodnight/Node-and-IOT#readme"
+  "dependencies": {
+    "aws-sdk": "2.3.11",
+    "express": "4.13.4",
+    "moment": "2.13.0",
+    "mongodb": "2.1.19",
+    "mosca": "1.2.0",
+    "mqtt": "1.8.0",
+    "pi-gpio": "0.0.8",
+    "rpi-gpio": "0.7.0",
+    "string_decoder": "0.10.31",
+    "underscore": "1.8.3",
+    "ws": "1.1.1"
+  }
 }
