--- a/lesson 6/package.json
+++ b/lesson 6/package.json
@@ -13,7 +13,7 @@
     "express": "4.13.4",
     "moment": "2.13.0",
     "mongodb": "2.1.19",
-    "mosca": "1.2.0",
+    "mosca": ">=2.8.2",
     "mqtt": "1.8.0",
     "pi-gpio": "0.0.8",
     "socket.io": "1.4.5",
