--- a/lesson 6/package.json
+++ b/lesson 6/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "aws-sdk": "2.3.11",
     "express": "4.13.4",
-    "moment": "2.13.0",
+    "moment": ">=2.19.3",
     "mongodb": "2.1.19",
     "mosca": ">=2.8.2",
     "mqtt": "1.8.0",
